--- a/website/layout/navbar.html
+++ b/website/layout/navbar.html
@@ -205,7 +205,7 @@
       <a href="../seasons/seasons.html">Seasons</a>
       <a href="../robot/robot.html">Robot Design</a>
       <a href="../missions/missions.html">Missions</a>
-      <a href="../work/hello.html">AlliedWork</a>
+      <a href="../work/">AlliedWork</a>
     </div>
   </nav>
 
