--- a/website/layout/navbar.html
+++ b/website/layout/navbar.html
@@ -207,11 +207,11 @@
     </button>
 
     <div id="menu" class="navbar-links">
-      <a href="../home/index.html">Home</a>
-      <a href="../about-us/abtus.html">Members</a>
-      <a href="../seasons/seasons.html">Seasons</a>
-      <a href="../robot/robot.html">Robot Design</a>
-      <a href="../missions/missions.html">Missions</a>
+      <a href="../home/">Home</a>
+      <a href="../about-us/">Members</a>
+      <a href="../seasons/">Seasons</a>
+      <a href="../robot/">Robot Design</a>
+      <a href="../missions/">Missions</a>
       <a href="../work/">AlliedWork</a>
     </div>
   </nav>
