--- a/website/layout/navbar.html
+++ b/website/layout/navbar.html
@@ -211,7 +211,7 @@
       <a href="../about-us/">Members</a>
       <a href="../seasons/">Seasons</a>
       <a href="../robot/">Robot Design</a>
-      <a href="../missions/">Missions</a>
+      <a href="../aac/">AAC</a>
       <a href="../work/">AlliedWork</a>
     </div>
   </nav>
