--- a/website/layout/navbar.html
+++ b/website/layout/navbar.html
@@ -214,6 +214,7 @@
       <a href="../robot/">Robot Design</a>
       <a href="../aac/">AAC</a>
       <a href="../work/">AlliedWork</a>
+      <a href="../../portfolio/v2index.html">Docs</a>
     </div>
   </nav>
 
